# trpx2.0

./: .gitignore  CMakeLists.txt  README.md  build.sh
DIALS_integration/: FormatTRPX.py
Doxygen/: Doxyfile  doxygen-awesome.css
ImageJ/: TRPX_Reader.java
include/: Bitqueue.hpp  Concurrent.hpp  Grey_tif.hpp  Operators.hpp  Shared_array.hpp  Terse.hpp  Terse_hdf5.hpp  Terse_python.hpp  Unique_array.hpp  XML_element.hpp
notebook/: pyterse.ipynb
py_tests/: filter_test.py  pyterse_test.py
pyterse/: CMakeLists.txt
pyterse/src/: pyterse.cpp
tersecodec/: CMakeLists.txt
tersecodec/src/: filter.cpp
